--- a/.github/workflows/terraform_static_analysis.yml
+++ b/.github/workflows/terraform_static_analysis.yml
@@ -16,10 +16,11 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Checkov baseline static analysis
         id: checkov
         uses: bridgecrewio/checkov-action@master
         with:
+          baseline: .checkov.baseline
           quiet: true
